--- a/performances/mysql/update_set_use_concat_function/docker-compose.yml
+++ b/performances/mysql/update_set_use_concat_function/docker-compose.yml
@@ -9,11 +9,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus:  '2'
-          memory: 4G
+          cpus:  '1'
+          memory: 512M
         reservations:
-          cpus:  '2'
-          memory: 4G
+          cpus:  '1'
+          memory: 512M
 
   ruby:
     image: ruby:3
